--- a/styles/dark.css
+++ b/styles/dark.css
@@ -9,4 +9,16 @@
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя
   */
+  --main-font: IBM Plex mono, sans-serif;
+  --main-text-size: 18px;
+  --main-text-color: #F1B2CE;
+  --title-color:  #DB00FF;
+  --title-shadow-color: #FF0070;
+  --bg-color: #000028;
+  --text-on-bg-color: #000028;
+  --bg-text-color: #FF0070;
+  --text-block-title-color: #FF0070;
+  --decorative-color: #FF0070;
+  --link-shadow-color: #FF0070;
+  --bg-image: url(../images/cover-image-dark.png);
 }
