--- a/styles/light.css
+++ b/styles/light.css
@@ -9,4 +9,61 @@
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя
   */
+  --main-font: IBM Plex mono, sans-serif;
+  --main-text-size: 18px;
+  --main-text-color: #353430;
+  --title-color: #FFC2E6;
+  --title-shadow-color: #FF0070;
+  --bg-color: #FFF1F7;;
+  --text-on-bg-color: #353430;
+  --bg-text-color: #FF8DCB;
+  --text-block-title-color: #353430;
+  --decorative-color: #353430;
+  --link-shadow-color: #FF0070;
+  --bg-image: url(../images/cover-image-light.png);
+}
+
+.theme_light .decorative-element {
+  display: none;
+}
+
+@media (width < 1024px) {
+  .theme_light .footer__title {
+    text-shadow: 2px 2px 0px var(--accent-color, #ff8dcb);
+  }
+
+  .theme_light .header__title {
+    text-shadow: 4px 4px 0px var(--accent-color, #ff8dcb);
+  }
+}
+
+@media (prefers-color-scheme: light) {
+  :root {
+  --main-font: IBM Plex mono, sans-serif;
+  --main-text-size: 18px;
+  --main-text-color: #353430;
+  --title-color: #FFC2E6;
+  --title-shadow-color: #FF0070;
+  --bg-color: #FFF1F7;;
+  --text-on-bg-color: #353430;
+  --bg-text-color: #FF8DCB;
+  --text-block-title-color: #353430;
+  --decorative-color: #353430;
+  --link-shadow-color: #FF0070;
+  --bg-image: url(../images/cover-image-light.png);
+  }
+
+  .theme_auto .decorative-element {
+    display: none;
+  }
+  
+  @media (width < 1024px) {
+    .theme_light .footer__title {
+      text-shadow: 2px 2px 0px var(--accent-color, #ff8dcb);
+    }
+  
+    .theme_light .header__title {
+      text-shadow: 4px 4px 0px var(--accent-color, #ff8dcb);
+    }
+  }
 }
