--- a/styles/variables.css
+++ b/styles/variables.css
@@ -2,3 +2,17 @@
   Переменные для вашего проекта
   и их переопределение под различные устройства
 */
+:root {
+  --main-font: IBM Plex mono, sans-serif;
+  --main-text-size: 18px;
+  --main-text-color: #F1B2CE;
+  --title-color:  #DB00FF;
+  --title-shadow-color: #FF0070;
+  --bg-color: #000028;
+  --text-on-bg-color: #000028;
+  --bg-text-color: #FF0070;
+  --text-block-title-color: #FF0070;
+  --decorative-color: #FF0070;
+  --link-shadow-color: #FF0070;
+  --bg-image: url(../images/cover-image-dark.png);
+}
