исправления после автотестов

--- a/styles/light.css
+++ b/styles/light.css
@@ -14,7 +14,7 @@
   --main-text-color: #353430;
   --title-color: #FFC2E6;
   --title-shadow-color: #FF0070;
-  --bg-color: #FFF1F7;;
+  --bg-color: #FFF1F7;
   --text-on-bg-color: #353430;
   --bg-text-color: #FF8DCB;
   --text-block-title-color: #353430;
@@ -44,7 +44,7 @@
   --main-text-color: #353430;
   --title-color: #FFC2E6;
   --title-shadow-color: #FF0070;
-  --bg-color: #FFF1F7;;
+  --bg-color: #FFF1F7;
   --text-on-bg-color: #353430;
   --bg-text-color: #FF8DCB;
   --text-block-title-color: #353430;
