--- a/styles/variables.css
+++ b/styles/variables.css
@@ -3,7 +3,7 @@
   и их переопределение под различные устройства
 */
 :root {
-  --main-font: IBM Plex mono, sans-serif;
+  --main-font: 'IBM Plex mono', sans-serif;
   --main-text-size: 18px;
   --main-text-color: #F1B2CE;
   --title-color:  #DB00FF;
