--- a/styles/light.css
+++ b/styles/light.css
@@ -9,7 +9,7 @@
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя
   */
-  --main-font: IBM Plex mono, sans-serif;
+  --main-font: 'IBM Plex mono', sans-serif;
   --main-text-size: 18px;
   --main-text-color: #353430;
   --title-color: #FFC2E6;
@@ -19,7 +19,7 @@
   --bg-text-color: #FF8DCB;
   --text-block-title-color: #353430;
   --decorative-color: #353430;
-  --link-shadow-color: #FF0070;
+  --link-shadow-color: #FF8DCB;
   --bg-image: url(../images/cover-image-light.png);
 }
 
@@ -27,7 +27,7 @@
   display: none;
 }
 
-@media (width < 1024px) {
+@media (width <= 768px) {
   .theme_light .footer__title {
     text-shadow: 2px 2px 0px var(--accent-color, #ff8dcb);
   }
@@ -39,7 +39,7 @@
 
 @media (prefers-color-scheme: light) {
   :root {
-  --main-font: IBM Plex mono, sans-serif;
+  --main-font: 'IBM Plex mono', sans-serif;
   --main-text-size: 18px;
   --main-text-color: #353430;
   --title-color: #FFC2E6;
@@ -49,7 +49,7 @@
   --bg-text-color: #FF8DCB;
   --text-block-title-color: #353430;
   --decorative-color: #353430;
-  --link-shadow-color: #FF0070;
+  --link-shadow-color: #FF8DCB;
   --bg-image: url(../images/cover-image-light.png);
   }
 
@@ -57,7 +57,7 @@
     display: none;
   }
   
-  @media (width < 1024px) {
+  @media (width <= 768px) {
     .theme_light .footer__title {
       text-shadow: 2px 2px 0px var(--accent-color, #ff8dcb);
     }
