--- a/styles/dark.css
+++ b/styles/dark.css
@@ -9,7 +9,7 @@
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя
   */
-  --main-font: 'IBM Plex mono', sans-serif;
+  --main-font: 'IBM Plex mono', monospace;
   --main-text-size: 18px;
   --main-text-color: #F1B2CE;
   --title-color:  #DB00FF;
